Changes to drawing, stats, turret creation and more
huge push